fix footer overlap on mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5,6 +5,10 @@ $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-seri
 
 @import "crt.scss";
 
+body {
+  margin-bottom: 30px;
+}
+
 html {
   background-attachment: fixed;
   background-size: cover;
